journal: fix spacing of navbar brand and links

--- a/journal/bootstrap.css
+++ b/journal/bootstrap.css
@@ -4824,14 +4824,14 @@ hr {
   box-shadow: none;
 }
 .navbar .brand {
-  padding: 16px 20px 20px;
+  padding: 19px 20px 21px;
   font-size: 24px;
   font-weight: bold;
   text-shadow: none;
   text-transform: uppercase;
 }
 .navbar .nav > li > a {
-  padding: 20px 10px 21px;
+  padding: 20px 10px 20px;
   font-size: 18px;
   text-shadow: none;
   text-transform: uppercase;
@@ -4840,11 +4840,11 @@ hr {
   background-color: transparent;
 }
 .navbar .navbar-text {
-  margin-top: 21px;
+  margin-top: 20px;
   padding-left: 10px;
   padding-right: 10px;
   font-size: 18px;
-  line-height: 18px;
+  line-height: 20px;
 }
 .navbar .nav > .active > a,
 .navbar .nav > .active > a:hover,
