--- a/journal/bootswatch.less
+++ b/journal/bootswatch.less
@@ -72,7 +72,7 @@ hr {
 	}
 
 	.brand {
-		padding: 16px 20px 20px;
+		padding: 19px 20px 21px;
 		font-size: 24px;
 		font-weight: bold;
 		text-shadow: none;
@@ -80,7 +80,7 @@ hr {
 	}
 
 	.nav > li > a {
-		padding: 20px 10px 21px;
+		padding: 20px 10px 20px;
 		font-size: 18px;
 		text-shadow: none;
 		text-transform: uppercase;
@@ -91,17 +91,22 @@ hr {
 	}
 
 	.navbar-text {
-		margin-top: 21px;
+		margin-top: 20px;
 		padding-left: 10px;
 		padding-right: 10px;
 		font-size: 18px;
-		line-height: 18px;
+		line-height: 20px;
 	}
 
 	.nav > .active > a,
 	.nav > .active > a:hover,
 	.nav > .active > a:focus {
 		.box-shadow(none);
+	}
+
+	.divider-vertical {
+		border-left-color: @grayLighter;
+		border-right-color: @grayLighter;
 	}
 
 	.dropdown-menu {
